# f

./: .gitignore  Cargo.toml  main.f25  settings.gradle.kts
app/: build.gradle.kts
examples/: README.md
examples/predefinedfunctions/arithmetic/: EvalDivide_OfTwoIntegers_ShouldDiv.f25  EvalDivide_OfTwoIntegers_ShouldDivide.f25  EvalMinus_OfTwoIntegers_ShouldSum.f25  EvalPlus_OfTwoIntegers_ShouldSubtract.f25
examples/predefinedfunctions/listoperations/: EvalCons_OfNonemptyListAndInteger_ShouldReturnCombinedList.f25  EvalCons_OfTwoNonemptyLists_ShouldReturnCombinedList.f25  EvalHead_WithNonemptyList_ShouldReturnFirstElem.f25  EvalHead_WithNonemptyList_ShouldReturnListOfFirstElem.f25  EvalTail_WithNonemptyList_ShouldReturnInitListWithoutFirstElem.f25
examples/specialforms/break/: EvalWhile_WithBreak_ShouldBreak.f25
examples/specialforms/cond/: Cond_WithThirdArgument_ShouldEvaluateSecond.f25  Cond_WithThirdArgument_ShouldEvaluateThird.f25  Cond_WithoutThirdArgument_ShouldEvaluateSecond.f25  Cond_WithoutThirdArgument_ShouldReturnNull.f25
examples/specialforms/func/: DefineFunc_ShouldNotEvalFunc.f25  EvalFunc_WithNoArgs_ShouldEval.f25  EvalFunc_WithOneArg_ShouldEval.f25  EvalFunc_WithRecursion_ShouldEval.f25  EvalFunc_WithShadowingArg_ShouldShadow.f25  EvalFunc_WithTwoArgs_ShouldEval.f25
examples/specialforms/lambda/: DefineLambda_ShouldNotEval.f25  EvalAssignedLambda_ShouldEval.f25  EvalLambda_WithNoArgs_ShouldEval.f25  EvalLambda_WithOneArg_ShouldEval.f25  EvalLambda_WithShadowingArg_ShouldShadow.f25  EvalLambda_WithTwoArgs_ShouldEval.f25
examples/specialforms/prog/: EvalProg_WithLoopBreak_ShouldNotBreakProg.f25  EvalProg_WithShadowingArg_ShouldShadow.f25  EvalProg_WithSimpleSequence_ShouldEval.f25
examples/specialforms/quote/: CreateQuote_OfList_ShouldNotEval.f25  CreateQuote_OfLiteral_ShouldBeSameAsWithoutQuote.f25  CreateQuote_OfNull_ShouldBeNull.f25
f25-cli/: Cargo.toml
f25-cli/src/: ast.rs  cli.rs  command.rs  main.rs
f25-cli/src/command/: completions.rs  run.rs
f25-parser/: Cargo.toml
f25-parser/src/: atom.rs  element.rs  keyword.rs  lib.rs  list.rs  literal.rs  program.rs  token_end.rs
(+87 files in other folders)
