[package]
name = "f25"
version.workspace = true
edition = "2024"
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
clap = { workspace = true, features = ["cargo", "derive"] }
clap-cargo = { workspace = true }
clap_complete_command = { workspace = true }
clio = { workspace = true, features = ["clap-parse"] }
colored_json = { workspace = true }
f25-parser = { workspace = true }
miette = { workspace = true }

[lints]
workspace = true
