[package]
name = "f25-parser"
version.workspace = true
edition = "2024"
description.workspace = true
repository.workspace = true
publish.workspace = true

[dependencies]
bigdecimal = { workspace = true, features = ["serde-json"] }
chumsky = { workspace = true }
compact_str = { workspace = true, features = ["serde"] }
miette = { workspace = true }
num-bigint = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
